Fix .fa-lg vertical-align in buttons

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -11,6 +11,10 @@
   &:hover {
     color: $btn-primary-color;
   }
+
+  .fa-lg {
+    vertical-align: middle;
+  }
 }
 
 .btn--share {
